<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.ui.LoginFragment">

    <!-- Linear layout is used to that it show login view vertically -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Shoe Shop Inventory"
            android:textSize="24sp"
            android:layout_gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="24dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edL_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            app:startIconDrawable="@drawable/ic_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edL_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/ic_lock"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:layout_gravity="center"/>

    </LinearLayout>
</layout>