<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ui.ShoeDetailFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.shoestore.ui.viewmodel.ShoeViewModel" />
    </data>

    <!-- Constraint layout is used to that it make user set his model manually -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_shoeDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:layout_marginTop="40dp"
            android:text="Enter Your Shoe Model"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_shoeDetails">

            <!-- Linear layout is used to that it contain editeTexts and Button to make user enable write his model -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edL_shoeName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shoeName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_shoeName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@={viewModel.newShoeName}" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edL_company"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/company">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@={viewModel.newShoeCompany}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edL_size"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/size">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@={viewModel.newShoeSize}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edL_description"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@={viewModel.newShoeDescription}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/save" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cancel" />

            </LinearLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>